--- a/index.html
+++ b/index.html
@@ -376,6 +376,90 @@
                                                         <div class="header-text">
                                                             <div class="title">
                                                                 <h2 class="text-title">
+                                                                    Progresso Semanal
+                                                                </h2>
+                                                            </div>
+                                                            <div class="subtitle">
+                                                                <h4 class="text-subtitle">
+                                                                    Sua evolução nos últimos 7 dias
+                                                                </h4>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                    <!-- Content Section -->
+
+                                                    <div class="progress-detail-content">
+                                                        <div class="content-wrapper primary">
+                                                            <div class="wrapper-inner">
+                                                                <div class="content-progress">
+                                                                    <div class="progress-text">
+                                                                        <div class="title">
+                                                                            <h3 class="text-title">
+                                                                                <span>
+                                                                                    <span>
+                                                                                        Meta semanal: 20 horas
+                                                                                    </span>
+                                                                                    <span>
+                                                                                        65% concluído
+                                                                                    </span>
+                                                                                </span>
+                                                                            </h3>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="progress">
+                                                                        <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                                                                            aria-valuemax="100"></div>
+                                                                    </div>
+                                                                    <div class="progress-caption">
+                                                                        <div class="caption">
+                                                                            <span>
+                                                                                <span>
+                                                                                    13h estudadas
+                                                                                </span>
+                                                                                <span>
+                                                                                    7h restantes
+                                                                                </span>
+                                                                            </span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>      
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                    <!-- Footer Section -->
+
+                                                    <div class="progress-detail-footer">
+                                                        <div class="footer-caption">
+                                                            <div class="caption">
+                                                                <span>
+                                                                    <span>
+                                                                        10 disciplinas
+                                                                    </span>
+                                                                    <span>
+                                                                        200 assuntos totais
+                                                                    </span>
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div class="col-page-inner">
+
+                                            <!-- Progress Detail - Primary -->
+
+                                            <section class="section progress-detail primary">
+                                                <div class="section-wrapper primary">
+                                                    
+                                                    <!-- Header Section -->
+
+                                                    <div class="progress-detail-header">
+                                                        <div class="header-text">
+                                                            <div class="title">
+                                                                <h2 class="text-title">
                                                                     Progresso Total
                                                                 </h2>
                                                             </div>
@@ -390,7 +474,42 @@
                                                     <!-- Content Section -->
 
                                                     <div class="progress-detail-content">
-
+                                                        <div class="content-wrapper primary">
+                                                            <div class="wrapper-inner">
+                                                                <div class="content-progress">
+                                                                    <div class="progress-text">
+                                                                        <div class="title">
+                                                                            <h3 class="text-title">
+                                                                                <span>
+                                                                                    <span>
+                                                                                        Assuntos concluídos
+                                                                                    </span>
+                                                                                    <span>
+                                                                                        24% do curso
+                                                                                    </span>
+                                                                                </span>
+                                                                            </h3>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="progress">
+                                                                        <div class="progress-bar" role="progressbar" style="width: 24%" aria-valuenow="24" aria-valuemin="0"
+                                                                            aria-valuemax="100"></div>
+                                                                    </div>
+                                                                    <div class="progress-caption">
+                                                                        <div class="caption">
+                                                                            <span>
+                                                                                <span>
+                                                                                    10 disciplinas
+                                                                                </span>
+                                                                                <span>
+                                                                                    200 assuntos totais
+                                                                                </span>
+                                                                            </span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>      
+                                                            </div>
+                                                        </div>
                                                     </div>
 
                                                     <!-- Footer Section -->
