--- a/index.html
+++ b/index.html
@@ -422,11 +422,8 @@
                                                                                 <div class="inner">
                                                                                     <div class="list-icon">
                                                                                         <div class="icon">
-                                                                                            <svg class="icon-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                                                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                                                                <circle cx="12" cy="12" r="10"></circle>
-                                                                                                <circle cx="12" cy="12" r="6"></circle>
-                                                                                                <circle cx="12" cy="12" r="2"></circle>
+                                                                                            <svg class="icon-red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                                                                <polygon points="6 3 20 12 6 21 6 3"></polygon>
                                                                                             </svg>
                                                                                         </div>
                                                                                     </div>
@@ -460,22 +457,19 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="wrapper-inner">
-                                                                            <div class="list-caption">
-                                                                                <div class="caption">
-                                                                                    <span>
-                                                                                        2h
-                                                                                    </span>
-                                                                                </div>
-                                                                            </div>
                                                                             <div class="list-button">
                                                                                 <div class="button">
-                                                                                    <a class="btn btn-block btn-default btn-icon primary" href="#">
+                                                                                    <a class="btn btn-block btn-default btn-solid primary" href="#">
                                                                                         <span class="wrapper">
                                                                                             <span class="icon">
                                                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                                                                    <polygon points="6 3 20 12 6 21 6 3"></polygon>
+                                                                                                    <circle cx="12" cy="12" r="10"></circle>
+                                                                                                    <polygon points="10 8 16 12 10 16 10 8"></polygon>
                                                                                                 </svg>
+                                                                                            </span>
+                                                                                            <span class="text">
+                                                                                                Iniciar Agora
                                                                                             </span>
                                                                                         </span>
                                                                                     </a>
