--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <!-- Title -->
 
     <title>
-        Study Plan - Index
+        Study Plan - Dashboard
     </title>
 
     <!-- Meta -->
@@ -74,10 +74,10 @@
                                 <div class="quick-access-list-header">
                                     <div class="header-text">
                                         <div class="title">
-                                            <h2 class="text-title text-semibold">
+                                            <h2 class="text-title">
                                                 <span>
                                                     <span class="icon">
-                                                        <svg class="icon-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                        <svg class="color-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                             <path
                                                                 d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z">
@@ -109,7 +109,7 @@
                                                         <a class="content-anchor" href="#"></a>
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                                     <path d="M8 2v4"></path>
                                                                     <path d="M16 2v4"></path>
@@ -132,7 +132,7 @@
                                                         <a class="content-anchor" href="#"></a>
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-orange" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-orange" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-book-open h-6 w-6 text-orange-600">
                                                                     <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
@@ -154,7 +154,7 @@
                                                         <a class="content-anchor" href="#"></a>
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-brown" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-brown" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-trophy h-6 w-6 text-yellow-600">
                                                                     <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
@@ -180,7 +180,7 @@
                                                         <a class="content-anchor" href="#"></a>
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-bar-chart3 h-6 w-6 text-purple-600">
                                                                     <path d="M3 3v18h18"></path>
@@ -239,7 +239,7 @@
                                                     <div class="wrapper-inner">
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-clock h-8 w-8 text-blue-600">
                                                                     <circle cx="12" cy="12" r="10"></circle>
@@ -271,7 +271,7 @@
                                                     <div class="wrapper-inner">
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-green" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-green" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-target h-8 w-8 text-green-600">
                                                                     <circle cx="12" cy="12" r="10"></circle>
@@ -304,7 +304,7 @@
                                                     <div class="wrapper-inner">
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-book-open h-8 w-8 text-purple-600">
                                                                     <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
@@ -336,7 +336,7 @@
                                                     <div class="wrapper-inner">
                                                         <div class="content-icon">
                                                             <div class="icon">
-                                                                <svg class="icon-brown" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                <svg class="color-brown" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                                                     class="lucide lucide-trophy h-8 w-8 text-yellow-600">
                                                                     <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
@@ -422,7 +422,7 @@
                                                                                 <div class="inner">
                                                                                     <div class="list-icon">
                                                                                         <div class="icon">
-                                                                                            <svg class="icon-red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                                                            <svg class="color-red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                                                                                 <polygon points="6 3 20 12 6 21 6 3"></polygon>
                                                                                             </svg>
                                                                                         </div>
@@ -485,7 +485,7 @@
                                                                                 <div class="inner">
                                                                                     <div class="list-icon">
                                                                                         <div class="icon">
-                                                                                            <svg class="icon-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                            <svg class="color-purple" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                                                                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                                                                 <circle cx="12" cy="12" r="10"></circle>
                                                                                                 <circle cx="12" cy="12" r="6"></circle>
@@ -549,7 +549,7 @@
                                                                                 <div class="inner">
                                                                                     <div class="list-icon">
                                                                                         <div class="icon">
-                                                                                            <svg class="icon-red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                                                            <svg class="color-red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                                                                                 <polygon points="6 3 20 12 6 21 6 3"></polygon>
                                                                                             </svg>
                                                                                         </div>
@@ -667,7 +667,7 @@
                                                                             <div class="outer">
                                                                                 <div class="list-icon">
                                                                                     <div class="icon">
-                                                                                        <svg class="icon-red" data-prefix="fas" data-icon="fire" role="img"
+                                                                                        <svg class="color-red" data-prefix="fas" data-icon="fire" role="img"
                                                                                             viewBox="0 0 448 512" aria-hidden="true">
                                                                                             <path fill="currentColor"
                                                                                                 d="M160.5-26.4c9.3-7.8 23-7.5 31.9 .9 12.3 11.6 23.3 24.4 33.9 37.4 13.5 16.5 29.7 38.3 45.3 64.2 5.2-6.8 10-12.8 14.2-17.9 1.1-1.3 2.2-2.7 3.3-4.1 7.9-9.8 17.7-22.1 30.8-22.1 13.4 0 22.8 11.9 30.8 22.1 1.3 1.7 2.6 3.3 3.9 4.8 10.3 12.4 24 30.3 37.7 52.4 27.2 43.9 55.6 106.4 55.6 176.6 0 123.7-100.3 224-224 224S0 411.7 0 288c0-91.1 41.1-170 80.5-225 19.9-27.7 39.7-49.9 54.6-65.1 8.2-8.4 16.5-16.7 25.5-24.2zM225.7 416c25.3 0 47.7-7 68.8-21 42.1-29.4 53.4-88.2 28.1-134.4-4.5-9-16-9.6-22.5-2l-25.2 29.3c-6.6 7.6-18.5 7.4-24.7-.5-17.3-22.1-49.1-62.4-65.3-83-5.4-6.9-15.2-8-21.5-1.9-18.3 17.8-51.5 56.8-51.5 104.3 0 68.6 50.6 109.2 113.7 109.2z">
@@ -706,7 +706,7 @@
                                                                             <div class="outer">
                                                                                 <div class="list-icon">
                                                                                     <div class="icon">
-                                                                                        <svg class="icon-green" data-prefix="fas" data-icon="calculator"
+                                                                                        <svg class="color-green" data-prefix="fas" data-icon="calculator"
                                                                                             role="img" viewBox="0 0 384 512" aria-hidden="true">
                                                                                             <path fill="currentColor"
                                                                                                 d="M64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-384c0-35.3-28.7-64-64-64L64 0zM96 64l192 0c17.7 0 32 14.3 32 32l0 32c0 17.7-14.3 32-32 32L96 160c-17.7 0-32-14.3-32-32l0-32c0-17.7 14.3-32 32-32zm16 168a24 24 0 1 1 -48 0 24 24 0 1 1 48 0zm80 24a24 24 0 1 1 0-48 24 24 0 1 1 0 48zm128-24a24 24 0 1 1 -48 0 24 24 0 1 1 48 0zM88 352a24 24 0 1 1 0-48 24 24 0 1 1 0 48zm128-24a24 24 0 1 1 -48 0 24 24 0 1 1 48 0zm80 24a24 24 0 1 1 0-48 24 24 0 1 1 0 48zM64 424c0-13.3 10.7-24 24-24l112 0c13.3 0 24 10.7 24 24s-10.7 24-24 24L88 448c-13.3 0-24-10.7-24-24zm232-24c13.3 0 24 10.7 24 24s-10.7 24-24 24-24-10.7-24-24 10.7-24 24-24z">
@@ -745,7 +745,7 @@
                                                                             <div class="outer">
                                                                                 <div class="list-icon">
                                                                                     <div class="icon">
-                                                                                        <svg class="icon-indigo" data-prefix="fas" data-icon="bullseye" role="img"
+                                                                                        <svg class="color-indigo" data-prefix="fas" data-icon="bullseye" role="img"
                                                                                             viewBox="0 0 512 512" aria-hidden="true">
                                                                                             <path fill="currentColor"
                                                                                                 d="M448 256a192 192 0 1 0 -384 0 192 192 0 1 0 384 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256 80a80 80 0 1 0 0-160 80 80 0 1 0 0 160zm0-224a144 144 0 1 1 0 288 144 144 0 1 1 0-288zM224 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z">
