--- a/achievement.html
+++ b/achievement.html
@@ -31,9 +31,9 @@
 
         <div class="page">
 
-            <!--Dashboard-->
+            <!--Achievement-->
 
-            <div class="page-content page-dashboard">
+            <div class="page-content page-achievement">
 
                 <!--Wizard-->
 
@@ -81,14 +81,14 @@
                         </div>
                     </section>
 
-                    <!-- Level Progress - Primary -->
+                    <!-- Progress Level - Primary -->
 
-                    <section class="section level-progress primary">
+                    <section class="section progress-level primary">
                         <div class="container">
 
                             <!-- Content Section -->
 
-                            <div class="level-progress-content">
+                            <div class="progress-level-content">
                                 <div class="content-wrapper primary">
                                     <div class="wrapper-inner">
                                         <div class="outer">
