--- a/report.html
+++ b/report.html
@@ -206,14 +206,14 @@
                                     <div class="row">
                                         <div class="col-page-inner">
 
-                                            <!-- Progress Weekly - Primary -->
+                                            <!-- Progress List - Primary -->
 
-                                            <section class="section progress-weekly primary">
+                                            <section class="section progress-list primary">
                                                 <div class="section-wrapper primary">
                                                     
                                                     <!-- Header Section -->
 
-                                                    <div class="progress-weekly-header">
+                                                    <div class="progress-list-header">
                                                         <div class="header-text">
                                                             <div class="title">
                                                                 <h2 class="text-title">
@@ -243,7 +243,7 @@
 
                                                     <!-- Content Section -->
 
-                                                    <div class="progress-weekly-content">
+                                                    <div class="progress-list-content">
                                                         <div class="content-wrapper primary">
                                                             <div class="wrapper-inner">
                                                                 <div class="content-progress">
@@ -667,6 +667,91 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Tip List - Primary -->
+
+                    <section class="section tip-list primary">
+                        <div class="container">
+                            <div class="section-wrapper primary">
+
+                                <!-- Header Section -->
+
+                                <div class="tip-list-header">
+                                    <div class="header-text">
+                                        <div class="title">
+                                            <h2 class="text-title">
+                                                Insights e Recomendações
+                                            </h2>
+                                        </div>
+                                        <div class="subtitle">
+                                            <h4 class="text-subtitle">
+                                                Análise inteligente do seu padrão de estudos
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Content Section -->
+
+                                <div class="tip-list-content">
+                                    <div class="row">
+                                        <div class="col-content-outer">
+                                            <div class="row">
+                                                <div class="col-content-inner">
+                                                    <div class="content-wrapper primary">
+                                                        <div class="content-text">
+                                                            <div class="title">
+                                                                <h3 class="text-title">
+                                                                    ✅ Pontos Fortes
+                                                                </h3>
+                                                            </div>
+                                                        </div>
+                                                        <div class="content-list">
+                                                            <ul>
+                                                                <li>
+                                                                    Consistência nos estudos matinais
+                                                                </li>
+                                                                <li>
+                                                                    Alta taxa de conclusão de sessões
+                                                                </li>
+                                                                <li>
+                                                                    Boa distribuição entre as matérias
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-content-inner">
+                                                    <div class="content-wrapper secondary">
+                                                        <div class="content-text">
+                                                            <div class="title">
+                                                                <h3 class="text-title">
+                                                                    ⚠️ Áreas de Melhoria
+                                                                </h3>
+                                                            </div>
+                                                        </div>
+                                                        <div class="content-list">
+                                                            <ul>
+                                                                <li>
+                                                                    Aumentar tempo médio por sessão
+                                                                </li>
+                                                                <li>
+                                                                    Focar mais em História
+                                                                </li>
+                                                                <li>
+                                                                    Manter sequência de estudos
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
