--- a/history.html
+++ b/history.html
@@ -31,9 +31,9 @@
 
         <div class="page">
 
-            <!--Report-->
+            <!--History-->
 
-            <div class="page-content page-report">
+            <div class="page-content page-history">
 
                 <!--Wizard-->
 
