--- a/plan.html
+++ b/plan.html
@@ -31,9 +31,9 @@
 
         <div class="page">
 
-            <!--Report-->
+            <!--Plan-->
 
-            <div class="page-content page-report">
+            <div class="page-content page-plan">
 
                 <!--Wizard-->
 
