--- a/report.html
+++ b/report.html
@@ -386,14 +386,14 @@
                                         </div>
                                         <div class="col-page-inner">
 
-                                            <!-- Performance Subject - Primary -->
+                                            <!-- Subject Performance - Primary -->
 
-                                            <section class="section performance-subject primary">
+                                            <section class="section subject-performance primary">
                                                 <div class="section-wrapper primary">
 
                                                     <!-- Header Section -->
 
-                                                    <div class="performance-subject-header">
+                                                    <div class="subject-performance-header">
                                                         <div class="header-text">
                                                             <div class="title">
                                                                 <h2 class="text-title">
@@ -421,7 +421,7 @@
 
                                                     <!-- Content Section -->
 
-                                                    <div class="performance-subject-content">
+                                                    <div class="subject-performance-content">
                                                         <div class="content-wrapper primary">
                                                             <div class="wrapper-inner">
                                                                 <div class="content-progress">
