--- a/timer.html
+++ b/timer.html
@@ -81,14 +81,14 @@
                         </div>
                     </section>
 
-                    <!-- Highlight Subject - Primary -->
+                    <!-- Subject Highlight - Primary -->
 
-                    <section class="section highlight-subject primary">
+                    <section class="section subject-highlight primary">
                         <div class="container">
 
                             <!-- Content Section -->
 
-                            <div class="highlight-subject-content">
+                            <div class="subject-highlight-content">
                                 <div class="content-wrapper primary">
                                     <div class="content-text">
                                         <div class="title">
@@ -113,7 +113,7 @@
                                                             <div class="col-inner">
                                                                 <div class="content-image">
                                                                     <div class="image">
-                                                                        <img src="/assets/images/root/highlight-subject-primary-content-image-1.png" />
+                                                                        <img src="/assets/images/root/subject-highlight-primary-content-image-1.png" />
                                                                     </div>
                                                                     <div class="anchor">
                                                                         <a href="#">
