--- a/plan.html
+++ b/plan.html
@@ -131,6 +131,128 @@
                             </div>
                         </div>
                     </section>
+
+                    <!-- Form Create Plan - Primary -->
+
+                    <section class="section form-create-plan primary d-none">
+                        <div class="container">
+
+                            <!-- Header Section -->
+
+                            <div class="form-create-plan-header">
+                                <div class="header-text">
+                                    <div class="title">
+                                        <h2 class="text-title">
+                                            Novo plano
+                                        </h2>
+                                    </div>
+                                    <div class="subtitle">
+                                        <h4 class="text-subtitle">
+                                            Escolha o curso, o fluxo de estudo e sua disponibilidade semanal
+                                        </h4>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Content Section -->
+
+                            <div class="form-create-plan-content">
+                                <div class="content-wrapper primary">
+                                    <div class="wrapper-inner">
+                                        <div class="content-text">
+                                            <div class="title">
+                                                <h3 class="text-title">
+                                                    Curso
+                                                </h3>
+                                            </div>
+                                        </div>
+                                        <div class="content-form">
+                                            <div class="form-group">
+                                                <div class="form-option">
+                                                    <select class="form-control">
+                                                        <option value="1" selected>
+                                                            Selecione um curso para estudar
+                                                        </option>
+                                                        <option value="2" >
+                                                            ENEM Completo (Vestibular)
+                                                        </option>
+                                                        <option value="3" >
+                                                            Concurso Público - Nível Médio (Concurso)
+                                                        </option>
+                                                        <option value="4">
+                                                            OAB - Ordem dos Advogados do Brasil (Juridico)
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="wrapper-inner">
+                                        <div class="content-text">
+                                            <div class="title">
+                                                <h3 class="text-title">
+                                                    Fluxo de Estudo
+                                                </h3>
+                                            </div>
+                                        </div>
+                                        <div class="content-form">
+                                            <div class="row">
+                                                <div class="col-form-outer">
+                                                    <div class="row">
+                                                        <div class="col-form-inner">
+                                                            <div class="form-group">
+                                                                <div class="form-radio">
+                                                                    <input class="form-radio-input" type="radio" name="form-CreatePlanPrimary-Flow" id="form-CreatePlanPrimary-Flow-1" value="form-CreatePlanPrimary-Flow-1" checked />
+                                                                    <label class="form-radio-label" for="form-CreatePlanPrimary-Flow-1">
+                                                                        <span>
+                                                                            <span class="title">
+                                                                                <svg class="color-blue" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                                    <circle cx="12" cy="12" r="10"></circle>
+                                                                                    <circle cx="12" cy="12" r="6"></circle>
+                                                                                    <circle cx="12" cy="12" r="2"></circle>
+                                                                                </svg>
+                                                                                Fluxo Completo
+                                                                            </span>
+                                                                            <span class="subtitle">
+                                                                                Todos os elementos para estudo aprofundado
+                                                                            </span>
+                                                                        </span>
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-form-inner">
+                                                            <div class="form-group">
+                                                                <div class="form-radio">
+                                                                    <input class="form-radio-input" type="radio" name="form-CreatePlanPrimary-Flow" id="form-CreatePlanPrimary-Flow-2" value="form-CreatePlanPrimary-Flow-2" checked />
+                                                                    <label class="form-radio-label" for="form-CreatePlanPrimary-Flow-2">
+                                                                        <span>
+                                                                            <span class="title">
+                                                                                <svg class="color-green" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                                                                    <path d="m9 11 3 3L22 4"></path>
+                                                                                </svg>
+                                                                                Fluxo Essencial
+                                                                            </span>
+                                                                            <span class="subtitle">
+                                                                                Foco nos pontos principais
+                                                                            </span>
+                                                                        </span>
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
