--- a/planning.html
+++ b/planning.html
@@ -806,44 +806,94 @@
                                             </div>
                                         </div>
                                         <div class="card">
-                                            <div class="card-header" id="headingTwo">
-                                                <h2 class="mb-0">
-                                                    <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                                                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                        Collapsible Group Item #2
-                                                    </button>
-                                                </h2>
-                                            </div>
-                                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                                <div class="card-body">
-                                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                                                    sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                                    labore sustainable VHS.
+                                            <div class="card-header collapsed" id="headingTwo">
+                                                <a class="header-anchor" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"></a>
+                                                <div class="header-wrapper primary">
+                                                    <div class="wrapper-inner">
+                                                        <div class="header-icon">
+                                                            <div class="icon">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                    <path d="m6 9 6 6 6-6"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                        <div class="header-text">
+                                                            <div class="title">
+                                                                <h3 class="text-title">
+                                                                    Física
+                                                                </h3>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="wrapper-inner">
+                                                        <div class="header-info">
+                                                            <div class="row">
+                                                                <div class="col-info-outer">
+                                                                    <div class="row">
+                                                                        <div class="col-info-inner">
+                                                                            <div class="info-wrapper primary">
+                                                                                <div class="info-value">
+                                                                                    <div class="value">
+                                                                                        <span>
+                                                                                            8/20
+                                                                                        </span>
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="info-text">
+                                                                                    <div class="subtitle">
+                                                                                        <h4 class="text-subtitle">
+                                                                                            Assuntos
+                                                                                        </h4>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-info-inner">
+                                                                            <div class="info-wrapper primary">
+                                                                                <div class="info-value">
+                                                                                    <div class="value">
+                                                                                        <span>
+                                                                                            48h/120h
+                                                                                        </span>
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="info-text">
+                                                                                    <div class="subtitle">
+                                                                                        <h4 class="text-subtitle">
+                                                                                            Horas
+                                                                                        </h4>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-info-inner">
+                                                                            <div class="info-wrapper primary">
+                                                                                <div class="info-progress">
+                                                                                    <div class="progress-value">
+                                                                                        <div class="value">
+                                                                                            <span>
+                                                                                                40%
+                                                                                            </span>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                    <div class="progress">
+                                                                                        <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+                                                                                            aria-valuemax="100"></div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="card">
-                                            <div class="card-header" id="headingThree">
-                                                <h2 class="mb-0">
-                                                    <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                                                        data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                        Collapsible Group Item #3
-                                                    </button>
-                                                </h2>
-                                            </div>
-                                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-SubjectListPrimary">
                                                 <div class="card-body">
-                                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                                                    sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                                    labore sustainable VHS.
+
                                                 </div>
                                             </div>
                                         </div>
